--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -87,14 +87,14 @@ layout: default
   
     {{ main_body }}
   </div>
-
-  <dialog id="hhrisidesheet" class="micl-sidesheet" popover open aria-labelledby="hhrisidesheet_title">
-    <div class="micl-sidesheet__headline">
-      <h2 id="hhrisidesheet_title">This Manual</h2>
-      <button type="button" class="micl-iconbutton-standard-s material-symbols-outlined" popovertarget="hhrisidesheet">close</button>
-    </div>
-    <div class="micl-sidesheet__content">
-      <p>This is the content of this.</p>
-    </div>
-  </dialog>
 </section>
+
+<dialog id="hhrisidesheet" class="micl-sidesheet" popover aria-labelledby="hhrisidesheet_title">
+<div class="micl-sidesheet__headline">
+  <h2 id="hhrisidesheet_title">This Manual</h2>
+  <button type="button" class="micl-iconbutton-standard-s material-symbols-outlined" popovertarget="hhrisidesheet">close</button>
+</div>
+<div class="micl-sidesheet__content">
+  <p>This is the content of this.</p>
+</div>
+</dialog>
