--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -89,12 +89,9 @@ layout: default
   </div>
 </section>
 
-<dialog id="hhrisidesheet" class="micl-sidesheet" popover aria-labelledby="hhrisidesheet_title">
-<div class="micl-sidesheet__headline">
-  <h2 id="hhrisidesheet_title">This Manual</h2>
-  <button type="button" class="micl-iconbutton-standard-s material-symbols-outlined" popovertarget="hhrisidesheet">close</button>
-</div>
-<div class="micl-sidesheet__content">
-  <p>This is the content of this.</p>
-</div>
-</dialog>
+<section class="micl-pane micl-pane--hidden-to-expanded">
+  <div class="hhri-onpage md-sys-typescale-body-large">
+    <p class="md-sys-typescale-title-large">This Manual</p>
+
+  </div>
+</section>
