--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -57,7 +57,7 @@ layout: default
 </section>
 
 <section class="micl-pane micl-pane--hidden-to-expanded">
-  <div class="hhri-onpage md-sys-typescale-body-large">
+  <div class="hhri-sidemenu md-sys-typescale-body-large">
     <p class="md-sys-typescale-title-large">On this page</p>
 
     {% for section in sections %}
