--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -75,26 +75,32 @@ header:not(.micl-appbar) {
 }
 
 /*
- Styles for the "On This Page" box that displays anchor links to anchors on the page.
+ Styles for the side-menu that displays links to detailed topics.
 */
-.hhri-onpage {
+.hhri-sidemenu {
+  --md-sys-list-item-one-height: 48px;
+  --md-sys-list-item-container-color: var(--md-sys-color-tertiary-container);
+
   position: fixed;
   display: flex;
   box-sizing: border-box;
   flex-flow: column;
   inline-size: var(--hhri-card-width);
+  max-block-size: calc(100vh - 96px);
   row-gap: 24px;
   margin-top: 48px;
-  padding: 32px 16px;
+  padding: 32px 0;
   border-radius: var(--md-sys-shape-corner-medium);
   background-color: var(--md-sys-color-tertiary-container);
 
-  a, p {
+  h3 {
     margin: 0;
     color: var(--md-sys-color-on-tertiary-container);
   }
-  a:not(:hover) {
-    text-decoration: none;
+  .micl-list-item-one {
+      .hhri-submenuitem {
+          padding-inline-start: var(--md-sys-padding-m);
+      }
   }
 }
 
