--- a/_layouts/theme.html
+++ b/_layouts/theme.html
@@ -58,7 +58,7 @@ layout: default
 
 <section class="micl-pane micl-pane--hidden-to-expanded">
   <div class="hhri-sidemenu md-sys-typescale-body-large">
-    <p class="md-sys-typescale-title-large">On this page</p>
+    <h3 class="md-sys-typescale-title-large">On this page</h3>
 
     {% for section in sections %}
       {% assign section_title = section | strip | append: '_title' %}
