--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -115,7 +115,7 @@ layout: default
                         <a href="{{ subitem.link }}">
                       {% endif %}
                       <span class="micl-list-item__text">
-                        <span class="micl-list-item__headline md-sys-typescale-body-medium">{{ subitem.title }}</span>
+                        <span class="micl-list-item__headline">{{ subitem.title }}</span>
                       </span>
                       {% if subitem.link %}
                         </a>
