--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -1,51 +1,51 @@
-.dark {
-  --md-sys-color-primary: rgb(5 103 126);
-  --md-sys-color-surface-tint: rgb(5 103 126);
+.light {
+  --md-sys-color-primary: rgb(29 101 134);
+  --md-sys-color-surface-tint: rgb(29 101 134);
   --md-sys-color-on-primary: rgb(255 255 255);
-  --md-sys-color-primary-container: rgb(182 235 255);
-  --md-sys-color-on-primary-container: rgb(0 78 96);
-  --md-sys-color-secondary: rgb(76 98 106);
+  --md-sys-color-primary-container: rgb(196 231 255);
+  --md-sys-color-on-primary-container: rgb(0 76 106);
+  --md-sys-color-secondary: rgb(78 97 109);
   --md-sys-color-on-secondary: rgb(255 255 255);
-  --md-sys-color-secondary-container: rgb(207 230 240);
-  --md-sys-color-on-secondary-container: rgb(52 74 82);
-  --md-sys-color-tertiary: rgb(90 92 126);
+  --md-sys-color-secondary-container: rgb(209 229 244);
+  --md-sys-color-on-secondary-container: rgb(55 73 85);
+  --md-sys-color-tertiary: rgb(97 90 124);
   --md-sys-color-on-tertiary: rgb(255 255 255);
-  --md-sys-color-tertiary-container: rgb(224 224 255);
-  --md-sys-color-on-tertiary-container: rgb(66 68 101);
+  --md-sys-color-tertiary-container: rgb(231 222 255);
+  --md-sys-color-on-tertiary-container: rgb(73 66 100);
   --md-sys-color-error: rgb(186 26 26);
   --md-sys-color-on-error: rgb(255 255 255);
   --md-sys-color-error-container: rgb(255 218 214);
   --md-sys-color-on-error-container: rgb(147 0 10);
-  --md-sys-color-background: rgb(245 250 253);
-  --md-sys-color-on-background: rgb(23 28 31);
-  --md-sys-color-surface: rgb(245 250 253);
-  --md-sys-color-on-surface: rgb(23 28 31);
-  --md-sys-color-surface-variant: rgb(219 228 232);
-  --md-sys-color-on-surface-variant: rgb(64 72 76);
-  --md-sys-color-outline: rgb(112 120 124);
-  --md-sys-color-outline-variant: rgb(191 200 204);
+  --md-sys-color-background: rgb(246 250 254);
+  --md-sys-color-on-background: rgb(24 28 31);
+  --md-sys-color-surface: rgb(246 250 254);
+  --md-sys-color-on-surface: rgb(24 28 31);
+  --md-sys-color-surface-variant: rgb(221 227 234);
+  --md-sys-color-on-surface-variant: rgb(65 72 77);
+  --md-sys-color-outline: rgb(113 120 126);
+  --md-sys-color-outline-variant: rgb(192 199 205);
   --md-sys-color-shadow: rgb(0 0 0);
   --md-sys-color-scrim: rgb(0 0 0);
   --md-sys-color-inverse-surface: rgb(44 49 52);
-  --md-sys-color-inverse-on-surface: rgb(237 241 244);
-  --md-sys-color-inverse-primary: rgb(135 209 235);
-  --md-sys-color-primary-fixed: rgb(182 235 255);
-  --md-sys-color-on-primary-fixed: rgb(0 31 40);
-  --md-sys-color-primary-fixed-dim: rgb(135 209 235);
-  --md-sys-color-on-primary-fixed-variant: rgb(0 78 96);
-  --md-sys-color-secondary-fixed: rgb(207 230 240);
-  --md-sys-color-on-secondary-fixed: rgb(7 30 38);
-  --md-sys-color-secondary-fixed-dim: rgb(179 202 212);
-  --md-sys-color-on-secondary-fixed-variant: rgb(52 74 82);
-  --md-sys-color-tertiary-fixed: rgb(224 224 255);
-  --md-sys-color-on-tertiary-fixed: rgb(22 25 55);
-  --md-sys-color-tertiary-fixed-dim: rgb(194 195 235);
-  --md-sys-color-on-tertiary-fixed-variant: rgb(66 68 101);
-  --md-sys-color-surface-dim: rgb(214 219 222);
-  --md-sys-color-surface-bright: rgb(245 250 253);
+  --md-sys-color-inverse-on-surface: rgb(237 241 245);
+  --md-sys-color-inverse-primary: rgb(144 206 244);
+  --md-sys-color-primary-fixed: rgb(196 231 255);
+  --md-sys-color-on-primary-fixed: rgb(0 30 45);
+  --md-sys-color-primary-fixed-dim: rgb(144 206 244);
+  --md-sys-color-on-primary-fixed-variant: rgb(0 76 106);
+  --md-sys-color-secondary-fixed: rgb(209 229 244);
+  --md-sys-color-on-secondary-fixed: rgb(10 30 40);
+  --md-sys-color-secondary-fixed-dim: rgb(182 201 215);
+  --md-sys-color-on-secondary-fixed-variant: rgb(55 73 85);
+  --md-sys-color-tertiary-fixed: rgb(231 222 255);
+  --md-sys-color-on-tertiary-fixed: rgb(29 23 54);
+  --md-sys-color-tertiary-fixed-dim: rgb(203 193 233);
+  --md-sys-color-on-tertiary-fixed-variant: rgb(73 66 100);
+  --md-sys-color-surface-dim: rgb(215 218 223);
+  --md-sys-color-surface-bright: rgb(246 250 254);
   --md-sys-color-surface-container-lowest: rgb(255 255 255);
-  --md-sys-color-surface-container-low: rgb(239 244 247);
-  --md-sys-color-surface-container: rgb(234 239 241);
-  --md-sys-color-surface-container-high: rgb(228 233 236);
-  --md-sys-color-surface-container-highest: rgb(222 227 230);
+  --md-sys-color-surface-container-low: rgb(240 244 248);
+  --md-sys-color-surface-container: rgb(235 238 243);
+  --md-sys-color-surface-container-high: rgb(229 232 237);
+  --md-sys-color-surface-container-highest: rgb(223 227 231);
 }
