--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -42,6 +42,7 @@ html {
 .micl-navigationrail__content {
   h6 {
     margin-block: 24px 8px;
+    color: var(--md-sys-color-on-surface-variant);
 
     &:first-of-type {
         margin-block-start: 0;
