--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,5 +71,7 @@
           {% endif %}
       </div>
     </footer>
+
+    <script src="{{ '/assets/js/hhri.js' | relative_url }}"></script>
   </body>
 </html>
